# SlicerSegmentHumanBody

./: .gitignore  CMakeLists.txt  README.md
SegmentAny3D/: CMakeLists.txt  SegmentAny3D.py
SegmentAny3D/Resources/UI/: SegmentAny3D.ui
SegmentAny3D/models/sam/modeling/: image_encoder.py
SegmentHumanBody/: CMakeLists.txt  SegmentHumanBody.py
SegmentHumanBody/Resources/UI/: SegmentHumanBody.ui
SegmentHumanBody/models/breast_model/: predict_mask_singleimage.py  utils.py
SegmentHumanBody/models/ct_segmentation/: environment.yml  predict_muscle_fat.py  requirements.txt
SegmentHumanBody/models/ct_segmentation/.ipynb_checkpoints/: predict_muscle_fat-checkpoint.py
SegmentHumanBody/models/ct_segmentation/nnUNetTrainer__nnUNetResEncUNetXLPlans__2d/: dataset.json  dataset_fingerprint.json
SegmentHumanBody/models/ct_segmentation/nnUNetTrainer__nnUNetResEncUNetXLPlans__2d/fold_5/: debug.json  training_log_2024_10_27_06_49_36.txt  training_log_2024_10_27_06_54_41.txt  training_log_2024_10_27_06_55_10.txt  training_log_2024_10_27_06_56_54.txt
SegmentHumanBody/models/ct_segmentation/results/: metrics.txt  plans.json  predict_from_raw_data_args.json
SegmentHumanBody/models/sam2_annotation_tool/: annotation_tool.py
SegmentHumanBody/models/sam2_annotation_tool/example_test_data/: train.txt
SegmentHumanBody/models/sam2_annotation_tool/sam2/: __init__.py  automatic_mask_generator.py  build_sam.py  sam2_image_predictor.py  sam2_video_predictor.py
SegmentHumanBody/models/sam2_annotation_tool/sam2/.ipynb_checkpoints/: build_sam-checkpoint.py  sam2_video_predictor-checkpoint.py
SegmentHumanBody/models/sam2_annotation_tool/sam2/configs/sam2.1/: lstm_sam2_hiera_t.yaml
SegmentHumanBody/models/sam2_annotation_tool/sam2/configs/sam2.1/.ipynb_checkpoints/: lstm_sam2_hiera_t-checkpoint.yaml
SegmentHumanBody/models/sam2_annotation_tool/sam2/configs/sam2.1_training/: lstm_sam2.1_hiera_t.yaml  lstm_sam2.1_hiera_t_mobile.yaml
SegmentHumanBody/models/sam2_annotation_tool/sam2/configs/sam2.1_training/.ipynb_checkpoints/: __init__-checkpoint.py  lstm_sam2-Copy1.1_hiera_t-checkpoint.yaml  lstm_sam2.1_hiera_t-checkpoint.yaml
SegmentHumanBody/models/sam2_annotation_tool/sam2/modeling/: feature_fuser.py  memory_attention.py  memory_encoder.py  sam2_base.py  sam2_utils.py
SegmentHumanBody/models/sam2_annotation_tool/sam2/modeling/.ipynb_checkpoints/: sam2_base-checkpoint.py
SegmentHumanBody/models/sam2_annotation_tool/sam2/modeling/backbones/: hieradet.py
SegmentHumanBody/models/sam2_annotation_tool/sam2/modeling/sam/: mask_decoder.py  prompt_encoder.py  transformer.py
SegmentHumanBody/models/sam2_annotation_tool/sam2_logs/configs/sam2.1_training/lstm_sam2.1_hiera_t.yaml/: config.yaml  config_resolved.yaml
SegmentHumanBody/models/sam2_annotation_tool/sam2_logs/configs/sam2.1_training/lstm_sam2.1_hiera_t.yaml/logs/: best_stats.json  log.txt  train_stats.json
SegmentHumanBody/models/sam2_annotation_tool/sam2_logs/configs/sam2.1_training/lstm_sam2.1_hiera_t_mobile.yaml/: config.yaml  config_resolved.yaml
SegmentHumanBody/models/sam2_annotation_tool/sam2_logs/configs/sam2.1_training/lstm_sam2.1_hiera_t_mobile.yaml/logs/: log.txt
SegmentHumanBody/models/sam2_annotation_tool/sam2_logs/configs/sam2.1_training/sam2.1_hiera_b+_MOSE_finetune.yaml/: config.yaml
SegmentHumanBody/models/sam2_annotation_tool/training/: train.py  trainer.py
SegmentHumanBody/models/sam2_annotation_tool/training/.ipynb_checkpoints/: train-checkpoint.py  trainer-checkpoint.py
SegmentHumanBody/models/sam2_annotation_tool/training/model/: sam2.py
SegmentHumanBody/models/sam2_annotation_tool/training/utils/: checkpoint_utils.py  data_utils.py  logger.py  train_utils.py
SegmentHumanBody/models/sam2_annotation_tool/training/utils/.ipynb_checkpoints/: train_utils-checkpoint.py
SegmentHumanBody/models/segment_any_muscle/: cfg.py  main.py
SegmentHumanBody/models/segment_any_muscle/sam/: build_sam.py
SegmentHumanBody/models/segment_any_muscle/sam/modeling/: common.py  image_encoder.py  mask_decoder.py  tiny_vit_sam.py  transformer.py
